--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            Hello! I'm Nabeyou, a passionate software engineer with experience in various technologies. Here's a bit
+            Hello! I'm Nabeyou, a Junior from Benedict College majoring in Computer Engineering with experience in
+            various technologies. Here's a bit
             about my journey and skills.
         </p>
         <!-- You can add more details or even an image here -->
