--- a/index.html
+++ b/index.html
@@ -4,52 +4,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astro-027's Portfolio</title>
+    <title>Nabeyou Tadessa - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 
 <body>
     <header>
-        <h1>Astro-027's Portfolio</h1>
+        <h1>Nabeyou Tadessa</h1>
         <nav>
             <ul>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
+                <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            Hello! I'm Nabeyou, a Junior from Benedict College majoring in Computer Engineering with experience in
-            various technologies. Here's a bit
-            about my journey and skills.
-        </p>
-        <!-- You can add more details or even an image here -->
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <!-- Example project; you can duplicate this structure for multiple projects -->
-        <div class="project">
-            <h3>Project Name</h3>
-            <p>Description of the project. What it does, technologies used, etc.</p>
-            <a href="#" target="_blank">View on GitHub</a>
+    <section id="home" class="home-section">
+        <h2>Welcome to My Portfolio</h2>
+        <p>I'm Nabeyou Tadessa, a Computer Engineering student passionate about technology and programming.</p>
+        <div class="social-links">
+            <a href="https://github.com/Astro-027" target="_blank">
+                <img src="Assests/github-icon.png" alt="GitHub">
+            </a>
+            <a href="Assests/resume.pdf" target="_blank">
+                <img src="Assests/resume-icon.jpg" alt="Resume">
+            </a>
+            <a href="http://www.linkedin.com/in/nabeyoutadessa" target="_blank">
+                <img src="Assests/linkedin-icon.jpg" alt="LinkedIn">
+            </a>
         </div>
     </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <div class="about-container">
+            <div class="about-image">
+                <img src="Assests/profilepic.jpg" alt="Nabeyou Tadessa">
+            </div>
+            <div class="about-text">
+                <p>Hi, I'm Nabeyou Tadessa, a junior in Computer Engineering with a strong passion for programming and
+                    technology. I am currently seeking internship or entry-level opportunities to apply my skills and
+                    contribute to innovative projects. I am committed to continuous learning and eager to make a
+                    meaningful impact
+                    in the field of technology.</p>
+            </div>
+        </div>
+    </section>
+    <section id="resume">
+        <h2>Resume</h2>
 
+        <div class="resume-section">
+            <h3>Skills</h3>
+            <p>I am fluent in a variety of programming languages and technologies, including Python, Git, GitHub,
+                GitLab, C++, Java, JavaScript, HTML, CSS, SQL, and MATLAB. I am also proficient in Microsoft Office,
+                technical support, and possess strong analytical and problem-solving skills. My communication and
+                presentation skills are excellent, and I am capable of working efficiently both in teams and
+                independently.</p>
+        </div>
+
+        <div class="resume-section">
+            <h3>Experience</h3>
+            <div class="experience">
+                <h4>Software Transformation Intern</h4>
+                <p><strong>AgFirst Farm Credit Bank</strong> - Summer 2022 and Summer 2023</p>
+                <ul>
+                    <li>Developed a chatbot for developer assistance</li>
+                    <li>Implemented a web application using Node.js</li>
+                    <li>Contributed to the replacement of an old mainframe system</li>
+                </ul>
+            </div>
+            <div class="experience">
+                <h4>Software Engineer Student</h4>
+                <p><strong>TechWise</strong> - March 2022 – September 8, 2023</p>
+                <ul>
+                    <li>Participated in a Google-sponsored program</li>
+                    <li>Received lectures on coding concepts</li>
+                    <li>Worked on projects and received mentorship from Google employees</li>
+                </ul>
+            </div>
+            <div class="experience">
+                <h4>Summer Undergraduate Research Institute Member</h4>
+                <p><strong>Benedict College</strong> - May 23, 2022 - Present</p>
+                <ul>
+                    <li>Conducted research on the effects of Dust and Sand on 5G wave propagation</li>
+                    <li>Ran simulations using MATLAB and Simulink</li>
+                    <li>Contributed to a paper for the IEEE WISEE 2022 conference</li>
+                </ul>
+            </div>
+            <div class="experience">
+                <h4>Assistant Instructor</h4>
+                <p><strong>Google Student Developer Clubs</strong> - September 28, 2022 - Present</p>
+                <ul>
+                    <li>Coordinated weekly meetings</li>
+                    <li>Engaged with speakers</li>
+                    <li>Contributed to the growth of the club since its establishment</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="resume-section">
+            <h3>Education</h3>
+            <div class="education">
+                <h4>B.S. Computer Engineering</h4>
+                <p><strong>Benedict College, Columbia SC</strong> - August 2021 - May 2025 (anticipated)</p>
+                <p>Maintained a 4.0 GPA while pursuing a degree in Computer Engineering.</p>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Notebooked</h3>
+            <p>A Journaling web app aimed at personal growth. Worked on designing pages and implementing features. <a
+                    href="https://gitlab.com/yourusername/notebooked" target="_blank">View on GitLab</a></p>
+        </div>
+        <div class="project">
+            <h3>Codemaster</h3>
+            <p>A learning website for programming courses. Contributed to both Frontend and Backend development. <a
+                    href="https://gitlab.com/yourusername/codemaster" target="_blank">View on GitLab</a></p>
+        </div>
+        <div class="project">
+            <h3>Retro Modern Chess</h3>
+            <p>A Chess game developed from scratch. Worked on implementing game functionality. <a
+                    href="https://github.com/Astro-027/Chess" target="_blank">View on GitLab</a></p>
+        </div>
+    </section>
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>If you'd like to get in touch, you can reach me at <a href="mailto:email@example.com">email@example.com</a>
-        </p>
-        <!-- You can also add a contact form here if needed -->
+        <form action="https://formspree.io/f/xdorjkee" method="POST">
+            <input type="hidden" name="_subject" value="New submission from your portfolio!">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
     </section>
 
     <footer>
-        <p>© 2023 Astro-027 | All rights reserved.</p>
+        <p>© 2023 Nabeyou Tadessa | All rights reserved.</p>
     </footer>
 </body>
 
