--- a/index.html
+++ b/index.html
@@ -39,76 +39,55 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-container">
-            <div class="about-image">
-                <img src="Assests/profilepic.jpg" alt="Nabeyou Tadessa">
-            </div>
+            <img src="Assests/profilepic.jpg" alt="Nabeyou Tadessa" class="about-image">
             <div class="about-text">
                 <p>Hi, I'm Nabeyou Tadessa, a junior in Computer Engineering with a strong passion for programming and
                     technology. I am currently seeking internship or entry-level opportunities to apply my skills and
                     contribute to innovative projects. I am committed to continuous learning and eager to make a
-                    meaningful impact
-                    in the field of technology.</p>
+                    meaningful impact in the field of technology.</p>
             </div>
         </div>
     </section>
     <section id="resume">
         <h2>Resume</h2>
-
         <div class="resume-section">
             <h3>Skills</h3>
-            <p>I am fluent in a variety of programming languages and technologies, including Python, Git, GitHub,
-                GitLab, C++, Java, JavaScript, HTML, CSS, SQL, and MATLAB. I am also proficient in Microsoft Office,
-                technical support, and possess strong analytical and problem-solving skills. My communication and
-                presentation skills are excellent, and I am capable of working efficiently both in teams and
-                independently.</p>
+            <p>I am fluent in various programming languages and technologies, including Python, Git, GitHub, GitLab,
+                C++, Java, JavaScript, HTML, CSS, SQL, and MATLAB. I am also proficient in Microsoft Office, technical
+                support, and possess strong analytical and problem-solving skills. My communication and presentation
+                skills are top-notch, allowing me to work efficiently both in teams and independently.</p>
         </div>
-
         <div class="resume-section">
             <h3>Experience</h3>
             <div class="experience">
-                <h4>Software Transformation Intern</h4>
-                <p><strong>AgFirst Farm Credit Bank</strong> - Summer 2022 and Summer 2023</p>
-                <ul>
-                    <li>Developed a chatbot for developer assistance</li>
-                    <li>Implemented a web application using Node.js</li>
-                    <li>Contributed to the replacement of an old mainframe system</li>
-                </ul>
+                <h4>Software Transformation Intern | AgFirst Farm Credit Bank</h4>
+                <p>During the summers of 2022 and 2023, I developed a chatbot for developer assistance, implemented a
+                    web application using Node.js, and contributed to the replacement of an old mainframe system.</p>
             </div>
             <div class="experience">
-                <h4>Software Engineer Student</h4>
-                <p><strong>TechWise</strong> - March 2022 – September 8, 2023</p>
-                <ul>
-                    <li>Participated in a Google-sponsored program</li>
-                    <li>Received lectures on coding concepts</li>
-                    <li>Worked on projects and received mentorship from Google employees</li>
-                </ul>
+                <h4>Software Engineer Student | TechWise</h4>
+                <p>From March 2022 to September 8, 2023, I participated in a Google-sponsored program, receiving
+                    lectures on coding concepts, working on projects, and receiving mentorship from Google employees.
+                </p>
             </div>
             <div class="experience">
-                <h4>Summer Undergraduate Research Institute Member</h4>
-                <p><strong>Benedict College</strong> - May 23, 2022 - Present</p>
-                <ul>
-                    <li>Conducted research on the effects of Dust and Sand on 5G wave propagation</li>
-                    <li>Ran simulations using MATLAB and Simulink</li>
-                    <li>Contributed to a paper for the IEEE WISEE 2022 conference</li>
-                </ul>
+                <h4>Summer Undergraduate Research Institute Member | Benedict College</h4>
+                <p>From May 23, 2022 to the present, I conducted research on the effects of Dust and Sand on 5G wave
+                    propagation, ran simulations using MATLAB and Simulink, and contributed to a paper for the IEEE
+                    WISEE 2022 conference.</p>
             </div>
             <div class="experience">
-                <h4>Assistant Instructor</h4>
-                <p><strong>Google Student Developer Clubs</strong> - September 28, 2022 - Present</p>
-                <ul>
-                    <li>Coordinated weekly meetings</li>
-                    <li>Engaged with speakers</li>
-                    <li>Contributed to the growth of the club since its establishment</li>
-                </ul>
+                <h4>Assistant Instructor | Google Student Developer Clubs</h4>
+                <p>Since September 28, 2022, I have been coordinating weekly meetings, engaging with speakers, and
+                    contributing to the growth of the club since its establishment.</p>
             </div>
         </div>
-
         <div class="resume-section">
             <h3>Education</h3>
             <div class="education">
-                <h4>B.S. Computer Engineering</h4>
-                <p><strong>Benedict College, Columbia SC</strong> - August 2021 - May 2025 (anticipated)</p>
-                <p>Maintained a 4.0 GPA while pursuing a degree in Computer Engineering.</p>
+                <h4>B.S. Computer Engineering | Benedict College, Columbia SC</h4>
+                <p>I have been pursuing my Bachelor's degree since August 2021 and anticipate graduating in May 2025.
+                    During this time, I have maintained a 4.0 GPA.</p>
             </div>
         </div>
     </section>
@@ -116,17 +95,17 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Notebooked</h3>
-            <p>A Journaling web app aimed at personal growth. Worked on designing pages and implementing features. <a
+            <p>A Journaling web app aimed at personal growth. I worked on designing pages and implementing features. <a
                     href="https://gitlab.com/yourusername/notebooked" target="_blank">View on GitLab</a></p>
         </div>
         <div class="project">
             <h3>Codemaster</h3>
-            <p>A learning website for programming courses. Contributed to both Frontend and Backend development. <a
+            <p>A learning website for programming courses. I contributed to both Frontend and Backend development. <a
                     href="https://gitlab.com/yourusername/codemaster" target="_blank">View on GitLab</a></p>
         </div>
         <div class="project">
             <h3>Retro Modern Chess</h3>
-            <p>A Chess game developed from scratch. Worked on implementing game functionality. <a
+            <p>A Chess game developed from scratch. I worked on implementing game functionality. <a
                     href="https://github.com/Astro-027/Chess" target="_blank">View on GitLab</a></p>
         </div>
     </section>
