Renamed appropriate links

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="project">
             <h3>Retro Modern Chess</h3>
             <p>A Chess game developed from scratch. I worked on implementing game functionality. <a
-                    href="https://github.com/Astro-027/Chess" target="_blank">View on GitLab</a></p>
+                    href="https://github.com/Astro-027/Chess" target="_blank">View on GitHub</a></p>
         </div>
     </section>
     <section id="contact">
